sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:21: error: type mismatch;
 found   : Double
 required: Int
    e = (e.toDouble/2)
                   ^